--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,14 @@
     <title>Nerd Lounge Home</title>
 </head>
 <body>
-
-    <button a href="/harrypotter">Harry Potter </button>
-    <button a href="/harrypotter">Harry Potter </button>
-    <button a href="/harrypotter">Harry Potter </button>
-    <button a href="/harrypotter">Harry Potter </button>
-    <button a href="/harrypotter">Harry Potter </button>
+    
+    <h1>Nerd Lounge Forums</h1>    
+    
+    <button a href="/harrypotter">Harry Potter </button> </br>
+    <button a href="/marvel">Marvel </button> </br>
+    <button a href="/starwars">Star Wars </button> </br>
+    <button a href="/dragonballz">Dragonball Z </button> </br>
+    <button a href="/animalcrossing">Animal Crossing </button> </br>
     
 </body>
 </html>
