--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -6,7 +6,7 @@
 </head>
 <header>
     <nav>
-        <a href="users/register">Create Account</a> | <a href="users/signin">Sign In</a>
+        <a href="Nerd_Lounge/users/register">Create Account</a> | <a href="Nerd_Lounge/users/signin">Sign In</a>
     </nav>
 </header>
 <body>
