--- a/views/animalcrossing/show.ejs
+++ b/views/animalcrossing/show.ejs
@@ -6,20 +6,24 @@
 </head>
 <header>
     <nav>
-        <a href="/Nerd_Lounge">Home</a> | <a href="/animal crossing">Back to Forum</a> | <a href="/signout">Sign Out</a>
+        <a href="/Nerd_Lounge/home">Home</a> | <a href="/Nerd_Lounge/animalcrossing">Back to Forum</a> | <a href="/signout">Sign Out</a>
     </nav>
 </header>
 <body>
     <h1><%=post.title%></h1>
     <p><%=post.bodyOfPost%></p> </br>
-    <h5><%=post.authorName%></h5></br>
+    <h5><%=post.authorName%></h5>
     <h5><%=post.date%></h5></br>
 
-    <a href="/animalcrossing/<%=posts[i].id%>/edit">Edit</a>
-    <form action="/animalcrossing/<%=posts[i].id%>?_method=DELETE" method="POST">
+    <!-- trying to get it to only show the edit and delete buttons for the person who created the post-->
+    <!--  if (post.authorName === user.username ) { %> -->
+        <button>
+            <a href="/Nerd_Lounge/animalcrossing/<%=post.id%>/edit">Edit</a>
+        </button>
+    <form action="/Nerd_Lounge/animalcrossing/<%=post.id%>?_method=DELETE" method="POST">
         <input type="submit" value="Delete">
     </form>
-
+    <!--  }  -->
 
     
 </body>
