routes and css done

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <title>Nerd Lounge Home</title>
 </head>
+<header id="signout">
+    <nav><a href="/Nerd_Lounge/users/signout">Sign Out</a> </nav>
+</header>
 <body>
 
-    <h1>Nerd Lounge Forums</h1>    
-    
-<a href="/harrypotter">Harry Potter</a> </br>
-<a href="/marvel">Marvel</a> </br>
-<a href="/starwars">Star Wars</a>  </br>
-<a href="/dragonballz">Dragonball Z</a> </br>
-<a href="/Nerd_Lounge/animalcrossing">Animal Crossing</a> </br>
+
+    <h1 id="nerd">Nerd Lounge Forums</h1>    
+
+    <img id="glasses" src="https://i.imgur.com/3lkuQre.png?1"> 
+    <p id="nerdpara">Welcome to the Nerd Lounge community where you may find adventure and commradery.</br> Please follow our N.E.R.D. rules.</p> </br>
+    <p id="rules"> N - No discrimation against other fandoms. E - Everyone is to be treated equally. R - Respect one another.  D - Dream big. </p></br>
+ 
+    <a href="/Nerd_Lounge/harrypotter">Harry Potter</a> </br>
+    <a href="/Nerd_Lounge/marvel">Marvel</a> </br>
+    <a href="/Nerd_Lounge/starwars">Star Wars</a>  </br>
+    <a href="/Nerd_Lounge/dragonballz">Dragonball Z</a> </br>
+    <a href="/Nerd_Lounge/animalcrossing">Animal Crossing</a> </br>
     
 </body>
+<footer>
+   
+</footer>
 </html>
