--- a/views/users/signin.ejs
+++ b/views/users/signin.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <title>User Sign In</title>
 </head>
 <body>
 
-    <h1>Sign into your Account</h1>
+    <h1 id="nerd">Sign into your Account</h1>
     <form action="/Nerd_Lounge/users/signin" method="POST">
         <fieldset>
             <label for="username:">Username:</label>
