--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <title>Nerd Lounge</title>
 </head>
 <header>
+    
+</header>
+<body>
+
+    <h1 id="nerdwelcome"> Welcome to Nerd Lounge</h1>
+    <p id="welcome">
+         Are you wizard waiting for your letter or a hero trying to defend the world? Maybe you are looking for life on a desserted island or a far far away planet. Nerd Lounge is a community where nerds of all fandoms can gather to disuss thier passions, learn about new worlds and meet new companions.
+    </p>
+
+    <img id="glasses1" src="https://i.imgur.com/3lkuQre.png?1"> </br>
+    
+</body>
+<footer>
     <nav>
         <a href="Nerd_Lounge/users/register">Create Account</a> | <a href="Nerd_Lounge/users/signin">Sign In</a>
     </nav>
-</header>
-<body>
-    <h1> Welcome to Nerd Lounge</h1>
-    <p>
-         Are you wizard waiting for your letter or a hero trying to defend the world? Maybe you are looking for life on a desserted island or a far far away planet. Nerd Lounge is a community where nerds of all fandoms can gather to disuss thier passions, learn about new worlds and meet new companions.
-    </p>
-    
-</body>
+</footer>
 </html>
