--- a/views/animalcrossing/index.ejs
+++ b/views/animalcrossing/index.ejs
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <title>Animal Crossing</title>
 </head>
+<div id="animalcrossing">
 <header>
-    <nav>
-        <a href="/Nerd_Lounge/home">Home</a> | <a href="/animalcrossing/new">Create a Post</a> | <a href="/signout">Sign Out</a>
+    <img id="acimage" src="https://animalcrossingworld.com/wp-content/uploads/2020/06/animal-crossing-new-horizons-guides-section-banner.png">
+    <nav id="acnav">
+        <a href="/Nerd_Lounge/home">Home</a> | <a href="/Nerd_Lounge/animalcrossing/new">Create a Post</a> | <a href="/Nerd_Lounge/users/signout">Sign Out</a>
     </nav>
 </header>
-<body>
-    <h1>Animal Crossing Forum</h1>
+
+<body class="harry potter">
+    <h1 id="title">Animal Crossing Forum</h1>
 
     <ul>
-        
-
             <% for (let i = 0; i < posts.length; i++) { %>
                 <% if (posts[i].fandom === "Animal Crossing") { %>
                 <li>
-                    <a href="/Nerd_Lounge/animalcrossing/<%=posts[i].id%>"><%=posts[i].title %> </a>
+                    <a id="acnav" href="/Nerd_Lounge/animalcrossing/<%=posts[i].id%>"><%=posts[i].title %> </a>
 
                 <% } else {%> 
-                        <h2>No Post Found</h2>
+                        <% console.log('no post found') %>
                     <%} %>
 
         
@@ -30,4 +33,5 @@
     </ul>
     
 </body>
+</div>
 </html>
