--- a/views/animalcrossing/new.ejs
+++ b/views/animalcrossing/new.ejs
@@ -1,7 +1,15 @@
 <html>
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <title>New Post</title>
 </head>
+<div id="animalcrossing">
+<header>
+    <img id="acimage" src="https://animalcrossingworld.com/wp-content/uploads/2020/06/animal-crossing-new-horizons-guides-section-banner.png">
+</header>
+
+
 <body>
     <h1>Add a New Post</h1>
     
@@ -24,4 +32,5 @@
     </form>
     <a href="/Nerd_Lounge/animalcrossing">Back</a>
 </body>
+</div>
 </html>
