--- a/views/animalcrossing/show.ejs
+++ b/views/animalcrossing/show.ejs
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <title>Animal Crossing Post</title>
 </head>
+<div id="animalcrossing">
 <header>
-    <nav>
-        <a href="/Nerd_Lounge/home">Home</a> | <a href="/Nerd_Lounge/animalcrossing">Back to Forum</a> | <a href="/signout">Sign Out</a>
+    <img id="acimage" src="https://animalcrossingworld.com/wp-content/uploads/2020/06/animal-crossing-new-horizons-guides-section-banner.png">
+    <nav id="acnav">
+        <a href="/Nerd_Lounge/home">Home</a> | <a href="/Nerd_Lounge/animalcrossing">Back to Forum</a> | <a href="/Nerd_Lounge/users/signout">Sign Out</a>
     </nav>
 </header>
+
 <body>
-    <h1><%=post.title%></h1>
-    <p><%=post.bodyOfPost%></p> </br>
-    <h5><%=post.authorName%></h5>
-    <h5><%=post.date%></h5></br>
+    <h1 id="title"><%=post.title%></h1>
+    <p id="acpara"><%=post.bodyOfPost%></p> </br>
+    <h5 id="acpara"><%=post.authorName%></h5>
+    <h5 id="acpara"><%=post.date%></h5></br>
 
     <!-- trying to get it to only show the edit and delete buttons for the person who created the post-->
     <!--  if (post.authorName === user.username ) { %> -->
         <button>
-            <a href="/Nerd_Lounge/animalcrossing/<%=post.id%>/edit">Edit</a>
+            <a id="edit" href="/Nerd_Lounge/animalcrossing/<%=post.id%>/edit">Edit</a>
         </button>
     <form action="/Nerd_Lounge/animalcrossing/<%=post.id%>?_method=DELETE" method="POST">
         <input type="submit" value="Delete">
@@ -27,4 +31,5 @@
 
     
 </body>
+</div>
 </html>
