--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <title>User Registration</title>
 </head>
 <body>
-
-    <h1>Register a New User</h1>
+    
+    <h1 id="nerd">Register a New User</h1>
     <form action="/Nerd_Lounge/users/register" method="POST">
         <fieldset>
             <label for="username:">Username:</label>
