--- a/views/harrypotter/new.ejs
+++ b/views/harrypotter/new.ejs
@@ -11,7 +11,7 @@
 <body>
     <h1>Add a New Post</h1>
     
-    <form action="/Nerd_Lounge/harrypotter" method="POST">
+    <form action="/harrypotter" method="POST">
         Title: <input type="text" name="title" /> <br/>
         Body:  <input type="textarea" name="bodyOfPost"  rows="10" cols="30"/> <br/>
         Author Name: <input type="text" name="authorName" > <br/>
@@ -28,7 +28,7 @@
   
         <input type="submit" value="Post to Forum" />
     </form>
-    <a href="/Nerd_Lounge/harrypotter">Back</a>
+    <a href="/harrypotter">Back</a>
 </body>
 </div>
 </html>
