--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <title>Nerd Lounge Home</title>
 </head>
 <header id="signout">
-    <nav><a href="/Nerd_Lounge/users/signout">Sign Out</a> </nav>
+    <nav><a href="/users/signout">Sign Out</a> </nav>
 </header>
 <body>
 
@@ -16,11 +16,11 @@
     <p id="nerdpara">Welcome to the Nerd Lounge community where you may find adventure and commradery.</br> Please follow our N.E.R.D. rules.</p> </br>
     <p id="rules"> N - No discrimation against other fandoms. E - Everyone is to be treated equally. R - Respect one another.  D - Dream big. </p></br>
  
-    <a href="/Nerd_Lounge/harrypotter">Harry Potter</a> </br>
-    <a href="/Nerd_Lounge/marvel">Marvel</a> </br>
-    <a href="/Nerd_Lounge/starwars">Star Wars</a>  </br>
-    <a href="/Nerd_Lounge/dragonballz">Dragonball Z</a> </br>
-    <a href="/Nerd_Lounge/animalcrossing">Animal Crossing</a> </br>
+    <a href="/harrypotter">Harry Potter</a> </br>
+    <a href="/marvel">Marvel</a> </br>
+    <a href="/starwars">Star Wars</a>  </br>
+    <a href="/dragonballz">Dragonball Z</a> </br>
+    <a href="/animalcrossing">Animal Crossing</a> </br>
     
 </body>
 <footer>
