--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -19,7 +19,7 @@
 </body>
 <footer>
     <nav>
-        <a href="Nerd_Lounge/users/register">Create Account</a> | <a href="Nerd_Lounge/users/signin">Sign In</a>
+        <a href="/users/register">Create Account</a> | <a href="/users/signin">Sign In</a>
     </nav>
 </footer>
 </html>
