--- a/views/animalcrossing/new.ejs
+++ b/views/animalcrossing/new.ejs
@@ -13,7 +13,7 @@
 <body>
     <h1>Add a New Post</h1>
     
-    <form action="/Nerd_Lounge/animalcrossing" method="POST">
+    <form action="/animalcrossing" method="POST">
         Title: <input type="text" name="title" /> <br/>
         Body:  <input type="textarea" name="bodyOfPost"  rows="10" cols="30"/> <br/>
         Author Name: <input type="text" name="authorName" > <br/>
@@ -30,7 +30,7 @@
   
         <input type="submit" value="Post to Forum" />
     </form>
-    <a href="/Nerd_Lounge/animalcrossing">Back</a>
+    <a href="/animalcrossing">Back</a>
 </body>
 </div>
 </html>
