--- a/views/animalcrossing/show.ejs
+++ b/views/animalcrossing/show.ejs
@@ -9,7 +9,7 @@
 <header>
     <img id="acimage" src="https://animalcrossingworld.com/wp-content/uploads/2020/06/animal-crossing-new-horizons-guides-section-banner.png">
     <nav id="acnav">
-        <a href="/Nerd_Lounge/home">Home</a> | <a href="/Nerd_Lounge/animalcrossing">Back to Forum</a> | <a href="/Nerd_Lounge/users/signout">Sign Out</a>
+        <a href="/home">Home</a> | <a href="/animalcrossing">Back to Forum</a> | <a href="/users/signout">Sign Out</a>
     </nav>
 </header>
 
@@ -22,9 +22,9 @@
     <!-- trying to get it to only show the edit and delete buttons for the person who created the post-->
     <!--  if (post.authorName === user.username ) { %> -->
         <button>
-            <a id="edit" href="/Nerd_Lounge/animalcrossing/<%=post.id%>/edit">Edit</a>
+            <a id="edit" href="/animalcrossing/<%=post.id%>/edit">Edit</a>
         </button>
-    <form action="/Nerd_Lounge/animalcrossing/<%=post.id%>?_method=DELETE" method="POST">
+    <form action="/animalcrossing/<%=post.id%>?_method=DELETE" method="POST">
         <input type="submit" value="Delete">
     </form>
     <!--  }  -->
