--- a/views/dragonballz/edit.ejs
+++ b/views/dragonballz/edit.ejs
@@ -11,7 +11,7 @@
 <body>
     <h1>Update Post</h1>
     
-    <form action="/Nerd_Lounge/dragonballz/<%=post.id%>?_method=PUT" method="POST">
+    <form action="/dragonballz/<%=post.id%>?_method=PUT" method="POST">
         Title: <input type="text" name="title" value="<%=post.title%>" /> <br/>
         Body:  <input type="textarea" name="bodyOfPost"  rows="10" cols="30" value="<%=post.bodyOfPost%>"/> <br/>
         Author Name: <input type="text" name="authorName" value="<%=post.authorName%>" > <br/>
@@ -28,7 +28,7 @@
   
         <input type="submit" value="Update Post" />
     </form>
-    <a href="/Nerd_Lounge/dragonballz">Back</a>
+    <a href="/dragonballz">Back</a>
 </body>
 </div>
 </html>
