--- a/views/harrypotter/show.ejs
+++ b/views/harrypotter/show.ejs
@@ -9,7 +9,7 @@
 <header>
     <img id="hpimage" src="https://i.imgur.com/Iqye6sd.png">
     <nav >
-        <a id="hpnav" href="/Nerd_Lounge/home">Home</a> | <a id="hpnav" href="/Nerd_Lounge/harrypotter">Back to Forum</a> | <a id="hpnav" href="/Nerd_Lounge/users/signout">Sign Out</a>
+        <a id="hpnav" href="/home">Home</a> | <a id="hpnav" href="/harrypotter">Back to Forum</a> | <a id="hpnav" href="/users/signout">Sign Out</a>
     </nav>
 </header>
 <body>
@@ -21,9 +21,9 @@
     <!-- trying to get it to only show the edit and delete buttons for the person who created the post-->
     <!--  if (post.authorName === user.username ) { %> -->
         <button>
-            <a id="edit" href="/Nerd_Lounge/harrypotter/<%=post.id%>/edit">Edit</a>
+            <a id="edit" href="/harrypotter/<%=post.id%>/edit">Edit</a>
         </button>
-    <form action="/Nerd_Lounge/harrypotter/<%=post.id%>?_method=DELETE" method="POST">
+    <form action="/harrypotter/<%=post.id%>?_method=DELETE" method="POST">
         <input type="submit" value="Delete">
     </form>
     <!--  }  -->
