--- a/views/marvel/index.ejs
+++ b/views/marvel/index.ejs
@@ -9,7 +9,7 @@
 <header >
     <img id="mimage" src="https://i.imgur.com/Dcx8ZHC.png">
     <nav>
-        <a href="/Nerd_Lounge/home">Home</a> | <a href="/Nerd_Lounge/marvel/new">Create a Post</a> | <a href="/Nerd_Lounge/uers/signout">Sign Out</a>
+        <a href="/home">Home</a> | <a href="/marvel/new">Create a Post</a> | <a href="/users/signout">Sign Out</a>
     </nav>
 </header>
 <body>
@@ -21,7 +21,7 @@
             <% for (let i = 0; i < posts.length; i++) { %>
                 <% if (posts[i].fandom === "Marvel") { %>
                 <li>
-                    <a href="/Nerd_Lounge/marvel/<%=posts[i].id%>"><%=posts[i].title %> </a>
+                    <a href="/marvel/<%=posts[i].id%>"><%=posts[i].title %> </a>
 
                 <% } else {%> 
                         <%console.log("no post found")%>
