--- a/views/starwars/show.ejs
+++ b/views/starwars/show.ejs
@@ -9,7 +9,7 @@
 <header >
     <img id="swimage" src="https://i.imgur.com/Ohr498z.png">
     <nav>
-        <a href="/Nerd_Lounge/home">Home</a> | <a href="/Nerd_Lounge/starwars">Back to Forum</a> | <a href="/Nerd_Lounge/users/signout">Sign Out</a>
+        <a href="/home">Home</a> | <a href="/starwars">Back to Forum</a> | <a href="/users/signout">Sign Out</a>
     </nav>
 </header>
 <body>
@@ -21,9 +21,9 @@
     <!-- trying to get it to only show the edit and delete buttons for the person who created the post-->
     <!--  if (post.authorName === user.username ) { %> -->
         <button>
-            <a id="edit" href="/Nerd_Lounge/starwars/<%=post.id%>/edit">Edit</a>
+            <a id="edit" href="/starwars/<%=post.id%>/edit">Edit</a>
         </button>
-    <form action="/Nerd_Lounge/starwars/<%=post.id%>?_method=DELETE" method="POST">
+    <form action="/starwars/<%=post.id%>?_method=DELETE" method="POST">
         <input type="submit" value="Delete">
     </form>
     <!--  }  -->
