--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -7,7 +7,7 @@
 <body>
     
     <h1 id="nerd">Register a New User</h1>
-    <form action="/Nerd_Lounge/users/register" method="POST">
+    <form action="/users/register" method="POST">
         <fieldset>
             <label for="username:">Username:</label>
             <input type="text" name="username" id="username">
