--- a/views/users/signin.ejs
+++ b/views/users/signin.ejs
@@ -7,7 +7,7 @@
 <body>
 
     <h1 id="nerd">Sign into your Account</h1>
-    <form action="/Nerd_Lounge/users/signin" method="POST">
+    <form action="/users/signin" method="POST">
         <fieldset>
             <label for="username:">Username:</label>
             <input type="text" name="username" id="username">
